--- a/src/app/layout/navbar/navbar.html
+++ b/src/app/layout/navbar/navbar.html
@@ -1,11 +1,11 @@
 <div class="h-8 bg-primary">
     <div class="container mx-auto flex items-center justify-between h-full px-4 md:px-0">
-        
+
         <div class="flex items-center">
             <span class="text-white text-xs">
                 <i class="fas fa-envelope"></i>
-                <a href="mailto:csediualumni.official@gmail.com" class="hover:underline">
-                    csediualumni.official&commat;gmail.com
+                <a href="mailto:support@csediualumni.com" class="hover:underline">
+                    support&commat;csediualumni.com
                 </a>
             </span>
         </div>
